--- a/document/templates/document/safety_print.html
+++ b/document/templates/document/safety_print.html
@@ -1,1 +1,27 @@
-safety
+{% load static %}
+
+{% block head %}
+<meta http-equiv="Cache-Control" content="private, no-cache, no-store, max-age=0, must-revalidate">
+<link rel="stylesheet" href="{% static 'css/document/safety.css' %}" type="text/css" />
+
+{% endblock %}
+
+{% for connect in connect_list %}
+<div class="repeat">
+    <div class="print">
+        <input type="text" readonly class="input data" value="{{connect.departure_date|slice:':4'}}년{{connect.departure_date|slice:'5:7'}}월{{connect.departure_date|slice:'8:10'}}일">
+        <input type="text" readonly class="input bus" value="{{connect.bus_id.vehicle_num0}} {{connect.bus_id.vehicle_num}}">
+        <input type="text" class="input driver" value="{{connect.driver_id.name}}">
+        <textarea class="input school" maxlength="15">{{order.customer}}</textarea>
+    </div>
+</div>
+{% endfor %}
+
+{% block script %}
+<script>
+    window.onload = function () {
+        window.print()
+    }
+</script>
+<script src="{% static 'js/document/schoolNameLink.js' %}"></script>
+{% endblock %}
