--- a/humanresource/templates/HR/member.html
+++ b/humanresource/templates/HR/member.html
@@ -81,6 +81,7 @@
           <td>{{member.address}}</td>
         </tr>
         {% endfor %}
+        <tr class="blanckTr"></tr>
       </tbody>
     </table>
 
