--- a/dispatch/templates/dispatch/order_print.html
+++ b/dispatch/templates/dispatch/order_print.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load dispatch_custom_tags %}
 
 {% block head %}
 <meta http-equiv="Cache-Control" content="private, no-cache, no-store, max-age=0, must-revalidate">
@@ -7,13 +8,13 @@
 {% endblock %}
 
 <div class="print">
-    <div class="printTitle">~qockwltltj</div>
+    <div class="printTitle">{% if date1 == date2 %} {{date1}} {% else %} {{date1}} ~ {{date2}} {% endif %}배차현황</div>
     <div class="printTable">
         <div class="printTableHead">
             <div class="item">운행시간</div>
             <div class="item">노선</div>
             <div class="item">배차차량</div>
-            <div class="item">대수-변경(확정)</div>
+            <div class="item">대수(확정)</div>
             <div class="item">계약현황</div>
             <div class="item">상여금</div>
             <div class="item">계약금액</div>
@@ -30,72 +31,75 @@
             <div class="item">계산서 발행처</div>
         </div>
         <div class="prinTableBody">
-            <div class="printTableCell">
+            {% for order in order_list %}
+            <div class="printTableCell page-break">
                 <div class="item">
-                    22-09-21 10:00<br>
-                    22-09-22 13:00
+                    {{order.departure_date|slice:'2:'}}<br>
+                    {{order.arrival_date|slice:'2:'}}
                 </div>
                 <div class="item">
-                    [45인승 왕복]화성 월문초등학교-9시출발 ▶<br>
-                    화성 그린환경센터-12시학교도착
+                    {% if not order.bus_type and not order.operation_type %} {% else %} [{{order.bus_type}} {{order.operation_type}}] {% endif %}{{order.departure}} ▶<br>
+                    {{order.arrival}}
                 </div>
                 <div class="item">
-                    <span>1004(김형주)</span>
-                    <span>1357(오준희)</span>
-                    <span>1701(강창선)</span>
-                    <span>1711(노성중)</span>
-                    <span>3057(강중호)</span>
+                    {% for connect in order.info_order.all %}
+                    <span>{{connect.bus_id.vehicle_num}}({{connect.driver_id.name}})</span>
+                    {% endfor %}
                 </div>
                 <div class="item">
-                    1(3)대
+                    {{order.info_order.count}} ({{order.bus_cnt}})대
                 </div>
                 <div class="item">
-                    확정
+                    {{order.contract_status}}
                 </div>
                 <div class="item">
-                    100,000
+                    {{order.driver_allowance}}
                 </div>
                 <div class="item">
-                    100,000
+                    {{order.price}}
                 </div>
                 <div class="item">
-                    행정실<br>
-                    T.031-265-7014
+                    {{order.customer}}<br>
+                    {% if order.customer_phone %} {{order.customer_phone}} {% endif %}
                 </div>
                 <div class="item">
-                    표찰정보
+                    {{order.ticketing_info}}
                 </div>
                 <div class="item">
-                    고속 주차 상여
+                    {% if order.cost_type and order.cost_type|in_check:'고속' %} 고속 {% endif %}
+                    {% if order.cost_type and order.cost_type|in_check:'주차' %} 주차 {% endif %}
+                    {% if order.cost_type and order.cost_type|in_check:'상여' %} 상여 {% endif %}
                 </div>
                 <div class="item">
-                    
+                    {{order.references}}
                 </div>
                 <div class="item">
-                    100,000
+                    {{order.collection_amount}}
                 </div>
                 <div class="item">
-                    100,000
+                    {{order.price|sub:order.collection_amount}}
                 </div>
                 <div class="item">
-                    2022.09.23
+                    {{order.collection_date}}
                 </div>
                 <div class="item">
-                    시무실 입금
+                    {{order.deposit_status}}
                 </div>
                 <div class="item">
-                    VAT포함
+                    {% if order.VAT == 'y' %} VAT포함 {% endif %}
                 </div>
                 <div class="item">
-                    2022-09-23
+                    {{order.bill_date}}
                 </div>
                 <div class="item">
-                    홈텍스
+                    {{order.bill_place}}
                 </div>
             </div>
+            {% endfor %}
         </div>
     </div>
 </div>
 
 {% block script %}
+<script src="{% static 'js/dispatch/orderPopup.js' %}"></script>
 {% endblock %}
