--- a/static/css/dispatch/orderPrint.css
+++ b/static/css/dispatch/orderPrint.css
@@ -1,4 +1,7 @@
 body {
+    display: flex;
+    justify-content: center;
+    width: 138.6rem;
     margin: 0;
 }
 
@@ -22,11 +25,10 @@ body {
 }
 
 .printTable {
-    width: 100%;
+    width: 130.8rem;
     height: auto;
     margin-top: 3.2rem;
     border-top: 0.1rem solid black;
-    border-left: 0.1rem solid black;
 }
 
 .printTableHead {
@@ -49,7 +51,8 @@ body {
     display: flex;
     align-items: center;
     width: 100%;
-    height: 2.8rem;
+    min-height: 2.8rem;
+    height: auto;
 }
 
 .item {
@@ -61,13 +64,21 @@ body {
     border-right: 0.1rem solid black;
 }
 
+.item:nth-child(1){
+    border-left: 0.1rem solid black;
+}
+
 .printTableHead .item {
     font-weight: 700;
     font-size: 0.9rem;
+    box-sizing: border-box;
 }
 
 .printTableCell .item {
     font-size: 0.8rem;
+    overflow: hidden;
+    padding: 0.3rem 0;
+    box-sizing: border-box;
 }
 
 .item:nth-child(1) {
@@ -82,16 +93,12 @@ body {
     width: 16rem;
 }
 
-.item:nth-child(4),
-.item:nth-child(8) {
-    width: 7rem;
-}
-
 .item:nth-child(5),
 .item:nth-child(16) {
     width: 4rem;
 }
 
+.item:nth-child(4),
 .item:nth-child(6),
 .item:nth-child(7),
 .item:nth-child(12),
@@ -100,9 +107,10 @@ body {
 }
 
 .item:nth-child(9) {
-    width: 12rem;
+    width: 10rem;
 }
 
+.item:nth-child(8),
 .item:nth-child(10),
 .item:nth-child(15),
 .item:nth-child(17),
@@ -111,7 +119,7 @@ body {
 }
 
 .item:nth-child(11) {
-    width: 14rem;
+    width: 12rem;
 }
 
 .item:nth-child(14) {
@@ -121,7 +129,6 @@ body {
 
 
 .printTableCell .item:nth-child(2) {
-    width: 18.7rem;
     justify-content: flex-start;
     padding-left: 0.3rem;
 }
@@ -129,25 +136,35 @@ body {
 .printTableCell .item:nth-child(3) {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    width: 15.4rem;
-    height: calc(100% - 0.6rem);
+    text-align: center;
     padding: 0.3rem;
 }
 
 .printTableCell .item:nth-child(8) {
-    width: 6.7rem;
     justify-content: flex-start;
     padding-left: 0.3rem;
 }
 
 .printTableCell .item:nth-child(9) {
-    width: 11.7rem;
     justify-content: flex-start;
     padding-left: 0.3rem;
 }
 
 .printTableCell .item:nth-child(11) {
-    width: 13.7rem;
     justify-content: flex-start;
     padding-left: 0.3rem;
+}
+
+@media print {
+    @page {
+
+        width: 297mm;
+        height: 420mm;
+        margin: 0
+    }
+
+    body {
+        margin: 1.6cm;
+    }
+
 }
