--- a/static/css/document/document.css
+++ b/static/css/document/document.css
@@ -6,14 +6,14 @@
     display: flex;
 }
 
-.searchTitle{
+.searchTitle {
     font-size: 1.6rem;
     font-weight: 500;
     color: black;
     margin-right: 1rem;
 }
 
-.searchTool input[type=text]{
+.searchTool input[type=text] {
     width: 16rem;
     height: 2.4rem;
     padding-left: 0.3rem;
@@ -24,14 +24,14 @@
     outline: none;
 }
 
-.searchTool label{
+.searchTool label {
     font-size: 1.6rem;
     color: black;
     margin-left: 2rem;
     margin-right: 1rem;
 }
 
-.searchDataBox input[type=date]{
+.searchDataBox input[type=date] {
     margin: 0 0.6rem;
 }
 
@@ -39,11 +39,52 @@
     background-color: #444444;
     margin-left: 1.8rem
 }
+.dateControllBtnBox {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 10rem;
+    margin-left: 1.2rem;
+  }
+  
+  .dateToday {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 4.2rem;
+    height: 2.4rem;
+    background-color: #444;
+    color: white;
+    font-size: 1.4rem;
+    border-radius: 0.3rem;
+    cursor: pointer;
+  }
+  
+  .dateControllBtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 2.4rem;
+    height: 2.4rem;
+    border-radius: 100%;
+    background-color: #444;
+    font-size: 1.6rem;
+    color: white;
+    cursor: pointer;
+  }
+  
+  .dateControllBtn svg {
+    width: 40%;
+  }
 
 
 
 
-.documentArea{
+
+
+  
+
+.documentArea {
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -58,16 +99,17 @@
     box-sizing: border-box;
 }
 
-.documentType{
+.documentType {
     font-size: 1.5rem;
     font-weight: 500;
     margin-right: 1.2rem;
 }
-.documentTypeLocation{
+
+.documentTypeLocation {
     margin-left: 3rem;
 }
 
-.documentArea .btnModules{
+.documentArea .btnModules {
     width: auto;
     padding: 0 1rem;
     background-color: #444444;
@@ -77,7 +119,7 @@
 
 
 
-.contentsAreaBox{
+.contentsAreaBox {
     width: 100%;
     padding: 0;
 }
@@ -95,7 +137,7 @@
     border-spacing: 0;
 }
 
-.documentThead tr{
+.documentThead tr {
     background-color: #444444;
 }
 
@@ -106,40 +148,36 @@
     color: white;
 }
 
-.documentThead td:nth-child(1) {
-    width: 4%;
+.documentTableBox td:nth-child(1) {
+    width: 3%;
 }
 
-.documentThead td:nth-child(2) {
-    width: 8%;
-}
-
-.documentThead td:nth-child(3) {
+.documentTableBox td:nth-child(2) {
     width: 10%;
 }
 
-.documentThead td:nth-child(4) {
-    width: 30%;
+.documentTableBox td:nth-child(3) {
+    width: 33%;
 }
 
-.documentThead td:nth-child(5) {
-    width: 15%;
+.documentTableBox td:nth-child(4) {
+    width: 23%;
 }
 
-.documentThead td:nth-child(6) {
+.documentTableBox td:nth-child(5) {
     width: 8%;
 }
 
-.documentThead td:nth-child(7) {
+.documentTableBox td:nth-child(6) {
     width: 5%;
 }
 
-.documentThead td:nth-child(8) {
+.documentTableBox td:nth-child(7) {
     width: 8%;
 }
 
-.documentThead td:nth-child(9) {
-    width: 12%;
+.documentTableBox td:nth-child(8) {
+    width: 10%;
 }
 
 .documentTbodyBox {
@@ -170,6 +208,15 @@
 
 .documentTbody tr {
     height: 5.2rem;
+    cursor: pointer;
+}
+
+.documentTbody tr:nth-child(odd):hover {
+    background-color: #B5B5B5;
+}
+
+.documentTbody tr:nth-child(even):hover {
+    background-color: #B5B5B5;
 }
 
 .documentTbody tr:nth-child(odd) {
@@ -190,61 +237,33 @@
 }
 
 .documentTbody td:nth-child(1) {
-    width: 4%;
     border-left: 0.1rem solid black;
 }
 
-.documentTbody td:nth-child(2) {
-    width: 8%;
-}
-
-.documentTbody td:nth-child(3) {
-    width: 10%;
-}
-
-.documentTbody td:nth-child(4) {
-    width: 30%;
-}
-
-.documentTbody td:nth-child(5) {
-    width: 15%;
-}
-
-.documentTbody td:nth-child(6) {
-    width: 8%;
-}
-
-.documentTbody td:nth-child(7) {
-    width: 5%;
-}
-
-.documentTbody td:nth-child(8) {
-    width: 8%;
-}
-
-.documentTbody td:nth-child(9) {
-    width: 12%;
-}
-.documentBox{
+.documentBox {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
 }
-.documentBox a{
+
+.documentBox a {
     width: 22%;
     height: 3rem;
 }
-.documentBox a{
+
+.documentBox a {
     margin-bottom: 0.4rem;
 }
+
 .documentBox a:nth-child(9),
 .documentBox a:nth-child(10),
 .documentBox a:nth-child(11),
-.documentBox a:nth-child(12){
+.documentBox a:nth-child(12) {
     margin-bottom: 0;
 }
-.documentCell{
+
+.documentCell {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -254,4 +273,22 @@
     border-radius: 0.3rem;
     color: white;
     cursor: pointer;
+}
+
+
+.documentTbody td:nth-child(3) {
+    text-align: left;
+    padding-left: 1rem;
+    box-sizing: border-box;
+}
+
+.documentDispatch {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 0.4rem 1rem;
+    box-sizing: border-box;
+}
+
+.documentDispatch span {
+    margin: 0.2rem 0;
 }
